Suppress Pasteboard Updates When the Browser Is Incognito

Incognito windows should not update the global pasteboard.

BUG=845748

Change-Id: I6c56792dcf1ab855ccdc204af7f18eaba845a506
Reviewed-on: https://chromium-review.googlesource.com/1069424
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Robert Liao <robliao@chromium.org>
Cr-Commit-Position: refs/heads/master@{#561080}
Former-commit-id: ac1230bd5dd754666f099790eb406365f9a54f2d